# cli_automatizacao_rotina

./: .gitignore  LICENSE  README.md  build_exe.py  install.ps1  myc.spec  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  agents-and-plugins.md  openrouter-setup.md
docs/agentes/: use_cases.md
docs/english/: architecture.md  getting-started.md  use_cases.md
docs/plugins/: README.md
docs/portugues/: arquitetura.md  casos_de_uso.md  introducao.md
docs/specialists/: app_store_prep.md  backend_dev.md  bounty_exploit.md  bounty_recon.md  bounty_report.md  brainstorm.md  business_model.md  contratos_br.md  cv_architect.md  cv_deployer.md  data_correlator.md  database_designer.md  dataset_builder.md  design_thinking.md  devops_deploy.md  digital_footprint.md  editorial.md  etl_builder.md  exploit_writer.md  fact_checker.md  frontend_dev.md  growth_hacker.md  hardening_guide.md  idea_validator.md  jurisprudencia.md  legislacao_br.md  mobile_architect.md  model_trainer.md  mvp_builder.md  native_bridge.md  osint_collector.md  owasp_checker.md  (+12 more)
myc/: __main__.py  agent.py  agent_plugins.py  agent_router.py  cli.py  company_memory.py  config.py  custom_config.py  department.py  executor.py  html_dashboard.py  middleware_runner.py  monitor.py  planner.py  plugin_installer.py  plugin_manager.py  report_generator.py  runner.py  tui.py
tests/: conftest.py  test_agent.py  test_agent_plugins.py  test_config.py  test_department.py  test_functional.py  test_integration.py  test_monitor.py  test_plugin_installer.py  test_plugin_manager.py  test_runner.py  test_tui.py
(+229 files in other folders)
